# taskhub

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  install.ps1  install.sh  workflow.schema.json
.github/workflows/: ci.yml  release.yml
crates/taskhub-cli/: Cargo.toml
crates/taskhub-cli/src/: main.rs  resolve.rs
crates/taskhub-cli/src/commands/: dashboard.rs  init.rs  interactive.rs  list.rs  logs.rs  mod.rs  plugin.rs  run.rs  secret.rs  validate.rs  watch.rs  workflow.rs
crates/taskhub-core/: Cargo.toml
crates/taskhub-core/src/: credentials.rs  daemon.rs  engine.rs  error.rs  lib.rs  scheduler.rs  schema.rs  storage.rs  template.rs  types.rs  workflow.rs
crates/taskhub-core/src/triggers/: filesystem.rs  mod.rs  webhook.rs
crates/taskhub-plugins-core/: Cargo.toml
crates/taskhub-plugins-core/src/: email_imap.rs  email_smtp.rs  http.rs  lib.rs  postgres_plugin.rs  shell.rs  sqlite_plugin.rs  transform.rs
crates/taskhub-wasm-host/: Cargo.toml
crates/taskhub-wasm-host/src/: host.rs  lib.rs  manifest.rs  permissions.rs  registry.rs
examples/: calendar-reminder.yaml  discord-deploy.yaml  email-to-linear.yaml  github-notify.yaml  gitlab-todos.yaml  linear-triage.yaml  llm-summarize.yaml  notion-log.yaml  postgres-report.yaml  rss-to-slack.yaml  s3-backup.yaml  slack-alert.yaml  sqlite-log.yaml  transform-etl.yaml  weather-report.yaml
plugins/_template/: Cargo.toml  plugin.toml
plugins/_template/src/: lib.rs
plugins/calendar_caldav/: Cargo.toml  plugin.toml
plugins/calendar_caldav/src/: lib.rs
plugins/discord/: Cargo.toml  plugin.toml
plugins/discord/src/: lib.rs
plugins/github/: Cargo.toml  plugin.toml
plugins/github/src/: lib.rs
plugins/gitlab/: Cargo.toml  plugin.toml
plugins/gitlab/src/: lib.rs
plugins/linear/: Cargo.toml  plugin.toml
plugins/linear/src/: lib.rs
plugins/llm/: Cargo.toml  plugin.toml
plugins/llm/src/: lib.rs
plugins/notion/: Cargo.toml  plugin.toml
plugins/notion/src/: lib.rs
plugins/rss/: Cargo.toml  plugin.toml
plugins/rss/src/: lib.rs  sdk.rs
plugins/s3/: Cargo.toml  plugin.toml
plugins/s3/src/: lib.rs
plugins/slack/: Cargo.toml  plugin.toml
plugins/slack/src/: lib.rs
plugins/weather/: Cargo.toml  plugin.toml
plugins/weather/src/: lib.rs
scripts/: build-plugins.ps1  build-plugins.sh
