[workspace]
members = [
    "crates/taskhub-core",
    "crates/taskhub-cli",
    "crates/taskhub-plugins-core",
    "crates/taskhub-wasm-host",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/pietroairoldi/taskhub"

[workspace.dependencies]
tokio       = { version = "1", features = ["full"] }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
serde_yaml  = "0.9"
anyhow      = "1"
thiserror   = "1"
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap        = { version = "4", features = ["derive"] }
rusqlite    = { version = "0.31", features = ["bundled"] }
uuid        = { version = "1", features = ["v7"] }
chrono      = { version = "0.4", features = ["serde"] }
reqwest     = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
cron        = "0.12"
async-trait = "0.1"
tokio-cron-scheduler = "0.13"
shellexpand          = "3"
dirs                 = "5"
wasmtime             = { version = "28", default-features = false, features = ["cranelift", "runtime", "component-model"] }
wasmtime-wasi        = "28"
toml                 = "0.8"
axum                 = "0.7"
notify               = { version = "6", features = ["serde"] }
age                  = { version = "0.10", features = ["async"] }
keyring              = "2"
rpassword            = "7"
tray-icon            = { version = "0.14" }
tokio-stream         = "0.1"
futures              = "0.3"
regex                = "1"
lettre               = { version = "0.11", default-features = false, features = ["tokio1-native-tls", "smtp-transport", "builder", "hostname"] }
imap                 = { version = "3.0.0-alpha.15", default-features = false, features = ["native-tls"] }
native-tls           = "0.2"
tokio-postgres       = "0.7"
