[package]
name = "taskhub-wasm-host"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "TaskHub WASM plugin host (Wasmtime). Implemented in M3."

[dependencies]
taskhub-core     = { path = "../taskhub-core" }
serde.workspace  = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true

wasmtime.workspace      = true
wasmtime-wasi.workspace = true
toml.workspace          = true
async-trait.workspace   = true
chrono.workspace        = true
uuid.workspace          = true
url                     = "2"
dirs.workspace          = true
reqwest                 = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false }
tokio.workspace         = true
